--- a/meuFrontEnd/ingressos.html
+++ b/meuFrontEnd/ingressos.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto ">
               <li class="nav-item">
-                <a class="nav-link" href="./filmes.html">
+                <a class="nav-link" href="./index.html">
                   <i class="bi bi-house-fill me-1"></i>
                   Filmes
                 </a>
@@ -802,7 +802,7 @@
     </a>
   
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="./filmes.html" class="nav-link px-2" >Filmes</a></li>
+      <li class="nav-item"><a href="./index.html" class="nav-link px-2" >Filmes</a></li>
       <li class="nav-item"><a href="./ingressos.html" class="nav-link px-2" >Ingressos</a></li>
       <li class="nav-item"><a href="./contato.html" class="nav-link px-2" >Contato</a></li>
       <li class="nav-item"><a href="./cadastro.html" class="nav-link px-2" >Login/Cadastrar</a></li>
